[tool.poetry]
name = "extract-env"
version = "0.1.0"
description = "Moves the environment variables from a docker compose file into a .env file."
authors = ["Zack Hankin <admin@hankin.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "extract_env" }]

[tool.poetry.dependencies]
python = "^3.12"
icecream = "^2.1.3"
tqdm = "^4.66.2"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
dump-env = "^1.4.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[tool.poetry.scripts]
extract-env = "extract_env.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
