[tool.poetry]
name = "extract-env"
version = "0.1.0"
description = "Moves the environment variables from docker compose file/s into a/many .env file/s."
authors = ["Zack Hankin <admin@hankin.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ozy-Viking/extract_env"
keywords = [
  "environment",
  "variables",
  "yaml",
  "docker",
  "docker-compose",
  "compose",
  "dotenv",
  "extract",
  "extract-env",
  "extract_env",
  "extractenv",
  "extractEnv",
]
packages = [{ include = "extract_env" }]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
icecream = "^2.1.3"

[tool.poetry.scripts]
extract-env = "extract_env.__main__:main"

[tool.isort]
force_single_line = true
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
